...
                                                <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="go" secureTextEntry="YES" textContentType="password"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="mVO-CR-I6j">
                                                <rect key="frame" x="158" y="25" width="78" height="30"/>
                                                <constraints>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kya-po-ETv">
                                        <rect key="frame" x="10" y="57.5" width="61" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="cancelIdentifier" label="cancelLabel"/>
                                        <state key="normal" title="&lt; Cancel">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b46-FV-o7n">
                                        <rect key="frame" x="10" y="57.5" width="69" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="previousIdentifier" label="previousLabel"/>
                                        <state key="normal" title="&lt;Previous">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JAi-2B-jf8">
                                                <rect key="frame" x="15" y="406" width="50" height="21"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="179"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="7Rv-Ot-8F0">
                                        <rect key="frame" x="163" y="55" width="88" height="32.5"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                <state key="normal" title="Ok">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBv-O0-pBk">
                                <rect key="frame" x="181.5" y="632" width="51" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="logoutIdentifier" label="logoutLabel"/>
                                <state key="normal" title="LogOut"/>
                                <connections>
...
