...
        setKeyboardNotificationListeners()
    }

    private func initializeDatePicker(){
        let dateFormatter = DateFormatter()
        dateFormatter.dateFormat = "dd/MM/yyyy"
        let defaultDate = dateFormatter.date(from: "01/01/1990")
        datePicker_DateOfBirth = UIDatePicker()
        datePicker_DateOfBirth?.datePickerMode = .date
        datePicker_DateOfBirth?.addTarget(self, action: #selector(datechange(datepick:)), for: .valueChanged)
        textField_DateOfBirth.inputView = datePicker_DateOfBirth
        datePicker_DateOfBirth?.date = defaultDate!
    }
...

        if(isAllValid) {
            print("All Fields Are Valid")
            performSegue(withIdentifier: "registrationPage2Segue", sender: self)
        }
        
        let alert = AlertCreator.createAlert(title: "Invalid Input", message: "Please Check All Fields", buttonTitle: "Ok")
        self.present(alert, animated: true, completion: nil)
    }

    override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
        removeNotificationCenter()
        guard let registrationPage2 = segue.destination as? RegistrationPageTwoViewController else {
...
